--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -75,26 +75,31 @@
         <h1 class="sr-only">Trabalhos</h1>
 
         <div class="cards">
-          <div class="card progress" data-id="1">
-            <div class="id column">1</div>
+          <%jobs.forEach((job)=>{%>
+          <div class="card <%= job.status %> " data-id="<%= job.id %> ">
+            <div class="id column"><%= job.id %> </div>
             <div class="name column">
-              Pizzaria Guloso
+              <%= job.name %> 
             </div>
             <div class="deadline column">
               <span>Prazo</span>
-              <p>3 dias para a entrega</p>
+              <% if(job.status === 'done'){ %> 
+                <p>Prazo encerrado</p>
+              <%}else{%>
+              <p><%= job.remaining %>  dias para a entrega</p>
+              <%}%>
             </div>
             <div class="amount column">
               <span>Valor</span>
-              <p>R$ 4500,00</p>
+              <p>R$ <%= job.budget.toFixed(2).replace('.',',') %> </p>
             </div>
             <div class="status badge column">
-              Em andamento
+              <%= job.status === 'done' ? 'Encerrado' : 'Em andamento' %> 
             </div>
             <div class="actions column flex">
               <p class="sr-only">Ações</p>
               <a 
-                href="/job/edit" 
+                href="/job/<%= job.id %> " 
                 class="button white edit" 
                 title="Editar Job">
                 <img src="/images/edit-24.svg" alt="Editar Job" />
@@ -104,37 +109,8 @@
               </button>
             </div>
           </div>
+        <%})%>
           <!-- end card -->
-
-          <div class="card done" data-id="2">
-            <div class="id column">2</div>
-            <div class="name column">
-              OneTwo Project
-            </div>
-            <div class="deadline column">
-              <span>Prazo</span>
-              <p>3 dias para a entrega</p>
-            </div>
-            <div class="amount column">
-              <span>Valor</span>
-              <p>R$ 4500,00</p>
-            </div>
-            <div class="status badge column">
-              Encerrado
-            </div>
-            <div class="actions column flex">
-              <p class="sr-only">Ações</p>
-              <a 
-                href="/job/edit" 
-                class="button white edit" 
-                title="Editar Job">
-                <img src="/images/edit-24.svg" alt="Editar Job" />
-              </a>
-              <button class="delete button white" title="Excluir Job">
-                <img src="/images/trash-24.svg" alt="Excluir Job" />
-              </button>
-            </div>
-          </div>
         </div>
         <!-- end cards -->
       </main>
@@ -147,7 +123,7 @@
         <h3>Excluir Job</h3>
         <p>Quer mesmo excluir esse job? <br/>
         Ele será apagado para sempre.  
-        <p>
+        </p>
         <footer>
           <a 
             class="button gray" 
@@ -160,7 +136,7 @@
       </div>
       <form 
         method="post" 
-        action="/job/delete" 
+        action="/job/delete/ " 
         id="delete-job"></form>
     </div>
     <!-- end modal-wrapper -->
