--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -31,12 +31,16 @@
           <img id="logo" src="/images/logo.svg" alt="Logo" />
           <span id="notification">
             <img src="/images/alert-octagon.svg" alt="Alerta" />
-            Você tem 5 horas livres no seu dia
+            <% if(freeHours>0){ %> 
+            Você tem <%= freeHours %>  horas livres no seu dia
+            <% }else{ %>
+              Você não tem horas livres
+              <% } %>  
           </span>
           <a href="/profile" id="avatar-profile">
-            <p>Jakeliny <span>Ver perfil</span></p>
+            <p> <%= profile.name %> <span>Ver perfil</span></p>
             <img
-              src="https://avatars.githubusercontent.com/u/17316392?s=460&u=6912a91a70bc89745a2079fdcdad3bc3ce370f13&v=4"
+              src="<%= profile.avatar %> "
             />
           </a>
         </section>
@@ -48,21 +52,21 @@
 
           <div class="info">
             <div class="total">
-              <strong>12</strong>
+              <strong><%= statusCount.total %> </strong>
               Projetos ao total
             </div>
             <div class="in-progress">
-              <strong>7</strong>
+              <strong><%= statusCount.progress %> </strong>
               Em andamento
             </div>
             <div class="finished">
-              <strong>4</strong>
+              <strong><%= statusCount.done %> </strong>
               Encerrados
             </div>
           </div>
           <a class="button orange" href="/job">
             <span>
-              <img src="/images/plus-24.svg" alt="Novo Job" /> 
+              <img src="/images/plus-24.svg" alt="Novo Job" />
             </span>
             Adicionar novo job
           </a>
@@ -76,32 +80,31 @@
 
         <div class="cards">
           <%jobs.forEach((job)=>{%>
-          <div class="card <%= job.status %> " data-id="<%= job.id %> ">
-            <div class="id column"><%= job.id %> </div>
-            <div class="name column">
-              <%= job.name %> 
-            </div>
+          <div class="card <%= job.status %>" data-id="<%= job.id %> ">
+            <div class="id column"><%= job.id %></div>
+            <div class="name column"><%= job.name %></div>
             <div class="deadline column">
               <span>Prazo</span>
-              <% if(job.status === 'done'){ %> 
-                <p>Prazo encerrado</p>
+              <% if(job.status === 'done'){ %>
+              <p>Prazo encerrado</p>
               <%}else{%>
-              <p><%= job.remaining %>  dias para a entrega</p>
+              <p><%= job.remaining %> dias para a entrega</p>
               <%}%>
             </div>
             <div class="amount column">
               <span>Valor</span>
-              <p>R$ <%= job.budget.toFixed(2).replace('.',',') %> </p>
+              <p>R$ <%= job.budget.toFixed(2).replace('.',',') %></p>
             </div>
             <div class="status badge column">
-              <%= job.status === 'done' ? 'Encerrado' : 'Em andamento' %> 
+              <%= job.status === 'done' ? 'Encerrado' : 'Em andamento' %>
             </div>
             <div class="actions column flex">
               <p class="sr-only">Ações</p>
-              <a 
-                href="/job/<%= job.id %> " 
-                class="button white edit" 
-                title="Editar Job">
+              <a
+                href="/job/<%= job.id %> "
+                class="button white edit"
+                title="Editar Job"
+              >
                 <img src="/images/edit-24.svg" alt="Editar Job" />
               </a>
               <button class="delete button white" title="Excluir Job">
@@ -109,7 +112,7 @@
               </button>
             </div>
           </div>
-        <%})%>
+          <%})%>
           <!-- end card -->
         </div>
         <!-- end cards -->
@@ -121,23 +124,18 @@
       <div class="modal">
         <img src="/images/trash-48.svg" alt="Excluir Job" title="Excluir Job" />
         <h3>Excluir Job</h3>
-        <p>Quer mesmo excluir esse job? <br/>
-        Ele será apagado para sempre.  
+        <p>
+          Quer mesmo excluir esse job? <br />
+          Ele será apagado para sempre.
         </p>
         <footer>
-          <a 
-            class="button gray" 
-            href="#">Cancelar</a>
-          <button
-            class="button red"
-            type="submit"
-            form="delete-job">Excluir Job</button>
+          <a class="button gray" href="#">Cancelar</a>
+          <button class="button red" type="submit" form="delete-job">
+            Excluir Job
+          </button>
         </footer>
       </div>
-      <form 
-        method="post" 
-        action="/job/delete/ " 
-        id="delete-job"></form>
+      <form method="post" action="/job/delete/ " id="delete-job"></form>
     </div>
     <!-- end modal-wrapper -->
   </body>
