Modifed scripts index/job-edit/modal to addition the new modal (up and down), modifed index.css to addition two new buttons (up and down), modifed buttons.css to invisibel button when is in top and bottom card, modifed modal.css addition new modal (delete,up, down), bug fix page-headers.css and modal-wrapper in modal.css where is buggin view size, modifed dashboard controller to interaction in DataBase and arrows and table view index, bugfix profile.js (hours-per-day and days-per-week), modifed views to modal and buttons-arrows, created page not-found, created icons arrows

--- a/public/styles/partials/modal.css
+++ b/public/styles/partials/modal.css
@@ -1,9 +1,15 @@
-.modal-wrapper {
+/*Comentario modal Delete*/
+.modal-wrapperDelete {
+  height: 0;
+  width: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
   visibility: hidden;
   opacity: 0;
 }
 
-.modal-wrapper.on {
+.modal-wrapperDelete.on {
   height: 100vh;
   width: 100vw;
 
@@ -21,7 +27,7 @@
   opacity: 1;
 }
 
-.modal {
+.modalDelete {
   background: #F0F2F5;
 
   border-radius: 0.313rem;
@@ -33,11 +39,11 @@
   color: var(--color-card-content);
 }
 
-.modal img {
+.modalDelete img {
   margin-bottom: 2rem;
 }
 
-.modal h3 {
+.modalDelete h3 {
   color: var(--color-card-title);
 
   font-family: IBM Plex Sans;
@@ -48,11 +54,11 @@
   margin-bottom: .5rem;
 }
 
-.modal p {
+.modalDelete p {
   margin-bottom: 2rem;
 }
 
-.modal footer button {
+.modalDelete footer button {
   padding: 0.75rem 3rem;
   border-radius: 0.313rem;
 
@@ -67,23 +73,215 @@
   cursor:pointer;
 }
 
-.modal footer button + button {
+.modalDelete footer button + button {
   margin-left: .5rem;
 }
 
-.modal footer button:nth-child(1) {
+.modalDelete footer button:nth-child(1) {
   color: var(--color-card-content);
   background: var(--color-cancel);
 }
 
-.modal footer button:nth-child(1):hover {
+.modalDelete footer button:nth-child(1):hover {
   background: #ECEEF0;
 }
 
-.modal footer button:nth-child(2) {
+.modalDelete footer button:nth-child(2) {
   background: var(--color-delete);
 }
 
-.modal footer button:nth-child(2):hover {
+.modalDelete footer button:nth-child(2):hover {
+  background: #FA3F38;
+}
+
+/*Comentario modal up*/
+.modal-wrapperUp {
+  height: 0;
+  width: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.modal-wrapperUp.on {
+  height: 100vh;
+  width: 100vw;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  background: rgba(0, 0, 0, 0.8);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  visibility: visible;
+  opacity: 1;
+}
+
+.modalUp {
+  background: #F0F2F5;
+
+  border-radius: 0.313rem;
+
+  padding: 2.5rem;
+
+  text-align: center;
+
+  color: var(--color-card-content);
+}
+
+.modalUp img {
+  margin-bottom: 2rem;
+}
+
+.modalUp h3 {
+  color: var(--color-card-title);
+
+  font-family: IBM Plex Sans;
+  font-weight: 600;
+  font-size: 2rem;
+  line-height: 2.625rem;
+
+  margin-bottom: .5rem;
+}
+
+.modalUp p {
+  margin-bottom: 2rem;
+}
+
+.modalUp footer button {
+  padding: 0.75rem 3rem;
+  border-radius: 0.313rem;
+
+  font-family: IBM Plex Sans;
+  font-weight: 700;
+  font-size: 0.875rem;
+  line-height: 1.625rem;
+  text-transform: uppercase;
+
+  transition: all .2s;
+
+  cursor:pointer;
+}
+
+.modalUp footer button + button {
+  margin-left: .5rem;
+}
+
+.modalUp footer button:nth-child(1) {
+  color: var(--color-card-content);
+  background: var(--color-cancel);
+}
+
+.modalUp footer button:nth-child(1):hover {
+  background: #ECEEF0;
+}
+
+.modalUp footer button:nth-child(2) {
+  background: var(--color-delete);
+}
+
+.modalUp footer button:nth-child(2):hover {
+  background: #FA3F38;
+}
+
+/*Comentario modal Down*/
+.modal-wrapperDown {
+  height: 0;
+  width: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.modal-wrapperDown.on {
+  height: 100vh;
+  width: 100vw;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  background: rgba(0, 0, 0, 0.8);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  visibility: visible;
+  opacity: 1;
+}
+
+.modalDown {
+  background: #F0F2F5;
+
+  border-radius: 0.313rem;
+
+  padding: 2.5rem;
+
+  text-align: center;
+
+  color: var(--color-card-content);
+}
+
+.modalDown img {
+  margin-bottom: 2rem;
+}
+
+.modalDown h3 {
+  color: var(--color-card-title);
+
+  font-family: IBM Plex Sans;
+  font-weight: 600;
+  font-size: 2rem;
+  line-height: 2.625rem;
+
+  margin-bottom: .5rem;
+}
+
+.modalDown p {
+  margin-bottom: 2rem;
+}
+
+.modalDown footer button {
+  padding: 0.75rem 3rem;
+  border-radius: 0.313rem;
+
+  font-family: IBM Plex Sans;
+  font-weight: 700;
+  font-size: 0.875rem;
+  line-height: 1.625rem;
+  text-transform: uppercase;
+
+  transition: all .2s;
+
+  cursor:pointer;
+}
+
+.modalDown footer button + button {
+  margin-left: .5rem;
+}
+
+.modalDown footer button:nth-child(1) {
+  color: var(--color-card-content);
+  background: var(--color-cancel);
+}
+
+.modalDown footer button:nth-child(1):hover {
+  background: #ECEEF0;
+}
+
+.modalDown footer button:nth-child(2) {
+  background: var(--color-delete);
+}
+
+.modalDown footer button:nth-child(2):hover {
   background: #FA3F38;
 }
