--- a/src/views/job-edit.ejs
+++ b/src/views/job-edit.ejs
@@ -98,8 +98,8 @@
     </div>
     <!-- end container -->
 
-    <div class="modal-wrapper">
-      <div class="modal">
+    <div class="modal-wrapperDelete">
+      <div class="modalDelete">
         <img src="/images/trash-48.svg" alt="Excluir Job" title="Excluir Job" />
         <h3>Excluir Job</h3>
         <p>Quer mesmo excluir esse job? <br/>
