--- a/public/styles/partials/buttons.css
+++ b/public/styles/partials/buttons.css
@@ -82,6 +82,12 @@ button.button {
 
   padding: 0;
 }
+.actions .button:disabled{
+  opacity: 0;
+  width: 0;
+  height: 0;
+  margin-left: 0;
+}
 
 .actions .button + button {
   margin-left: 0.5rem;
