Edited index.css to adition the class to-do in css, Edited buttons.css to add .message-backend to error, Edited cads.css to created the class to-do, Edited main.css to created the class and variables to-do, Edited JobController in save and update function to created message with error, Edited views job-edit, job, index, profile to message backend in the valided  hours-per-day and day-hours, created function in jobutil to verify Daily Hours, Edited front-end the index.ejs to adition class and message to-do

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -27,9 +27,12 @@
   --color-cancel: #E1E3E5;
   --color-delete: #EB3B35; 
   --color-save: #36B336;
+  --color-to-do: #e79c24;
   
   --color-badge-progress-text: var(--color-save);
   --color-badge-progress-background: #E8F8E8;
+  --color-badge-todo-text:var(--color-to-do);
+  --color-badge-todo-background:   #fcfce1;
   --color-badge-done-text: var(--color-delete);
   --color-badge-done-background:#FAECEB;
 
