--- a/src/views/job.ejs
+++ b/src/views/job.ejs
@@ -82,6 +82,10 @@
             />
           </a>
         </div>
+        <p></p>
+        <div class="<%=message.title%>-backend">
+          <%= message.body%> 
+        </div>
       </aside>
     </div>
     <!-- end container -->
