--- a/public/styles/pages/index.css
+++ b/public/styles/pages/index.css
@@ -206,6 +206,10 @@ main {
   font-weight: 600;
 }
 
+.to-do .column p {
+  font-weight: 600;
+}
+
 .column.id {
   font-family: IBM Plex Sans;
   font-weight: 600;
