--- a/public/styles/partials/buttons.css
+++ b/public/styles/partials/buttons.css
@@ -92,3 +92,22 @@ button.button {
 .actions .button + button {
   margin-left: 0.5rem;
 }
+
+.message-backend {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: fit-content;
+
+  border-radius: 2.5rem;
+  padding: 0.5rem 1rem;
+  
+  margin-top: 1rem; 
+  font-weight: 500;
+  font-size: 0.875rem; /* 14px of 16px root*/
+  line-height: 1.625rem; /* 26px of 16px root*/
+
+  background-color: rgb(237, 237, 237);
+  background: var(--color-badge-done-background);
+  color: var(--color-badge-done-text);
+}
