--- a/src/views/job-edit.ejs
+++ b/src/views/job-edit.ejs
@@ -93,6 +93,10 @@
               title="Cancelar cadastro">
           </a>
         </div>
+        <p></p>
+        <div class="<%=message.title%>-backend">
+          <%= message.body%> 
+        </div>
       </aside>
       
     </div>
