--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -38,6 +38,9 @@
         <button class="button green" form="form-profile" type="submit">
           Salvar dados
         </button>
+        <div class="<%=message.title%>-backend">
+          <%= message.body%> 
+        </div>
       </aside>
       <main>
         <form id="form-profile" action="/profile" method="POST">
