--- a/src/views/job-edit.ejs
+++ b/src/views/job-edit.ejs
@@ -43,6 +43,7 @@
                 id="name" 
                 name="name"
                 value="<%= job.name %> "
+                required
               />
             </div>
 
@@ -55,6 +56,7 @@
                   step="0.1" 
                   id="daily-hours" 
                   name="daily-hours"
+                  required
                   value="<%=job["daily-hours"]%>"/>
               </div>
 
@@ -65,6 +67,7 @@
                   type="number"
                   id="total-hours" 
                   name="total-hours"
+                  required
                   value="<%= job["total-hours"] %>" />
               </div>
             </div>
