--- a/src/views/job.ejs
+++ b/src/views/job.ejs
@@ -34,7 +34,7 @@
 
             <div class="input-wrapper">
               <label for="name">Nome do Job</label>
-              <input type="text" id="name" name="name" />
+              <input type="text" id="name" name="name" required/>
             </div>
 
             <div class="input-group">
@@ -48,6 +48,7 @@
                   step="0.1"
                   id="daily-hours"
                   name="daily-hours"
+                  required
                 />
               </div>
 
@@ -56,7 +57,7 @@
                   >Estimativa de <br />
                   horas para esse Job?</label
                 >
-                <input type="number" id="total-hours" name="total-hours" />
+                <input type="number" id="total-hours" name="total-hours" required/>
               </div>
             </div>
           </fieldset>
