--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -55,6 +55,7 @@
                   type="text"
                   id="name"
                   name="name"
+                  required
                   value="<%= profile.name%>"
                 />
               </div>
@@ -66,6 +67,7 @@
                   type="url"
                   id="avatar"
                   name="avatar"
+                  required
                   value="<%= profile.avatar%>"
                 />
               </div>
@@ -83,7 +85,7 @@
                 >
                 <input type="amount" step="0.1" id="monthly-budget"
                 name="monthly-budget" placeholder="R$" value="<%=
-                profile["monthly-budget"]%>"/>
+                profile["monthly-budget"]%>" required/>
               </div>
 
               <div class="input-wrapper">
@@ -92,7 +94,7 @@
                   quero trabalhar por dia?</label
                 >
                 <input type="number" id="hours-per-day" name="hours-per-day"
-                value="<%= profile["hours-per-day"]%>"/>
+                value="<%= profile["hours-per-day"]%>" required/>
               </div>
             </div>
 
@@ -102,7 +104,7 @@
                   >Quantos dias <br />quero trabalhar por semana?</label
                 >
                 <input type="number" id="days-per-week" name="days-per-week"
-                value="<%= profile["days-per-week"]%>"/>
+                value="<%= profile["days-per-week"]%>" required/>
               </div>
 
               <div class="input-wrapper">
@@ -112,7 +114,7 @@
                 >
                 <input type="number" id="vacation-per-year"
                 name="vacation-per-year" value="<%=
-                profile["vacation-per-year"]%>"/>
+                profile["vacation-per-year"]%>" required/>
               </div>
             </div>
           </fieldset>
